todoyu Changelog

todoyu 2.0.4 - released 2010-09-22
	* Feature: TodoyuBaseObject now implements Dwoo_IDataProvider interface and is valid as data object for templates
	* Feature: Quickinfo hiding is delayed now. Allows selecting and clicking of its content
	* Feature: Added more indexes to tracking table. Makes queries to this table up to 200 times faster
	* Feature: Added failing detection for asset upload. Check if server refused upload and sent an error page
	* Feature: Auto preselect persons in comment if they requested a feedback in the last comment
	* Bugfix: ODT parsing more robustly
	* Bugfix: Fixed problem with japanese date format labels
	* Bugfix: Localized calendar header rendering
	* Bugfix: Fixed and simplified data function for day timestamps in month
	* Bugfix: Task in todo tab ordered by date_start now
	* Bugfix: Only tasks (no containers) in the todo tab in portal)
	* Bugfix: Tracking only counts trackings from the past (ignore future trackings)
	* Bugfix: Timetracking callback sends now more info (idTask, trackedTotal, trackedToday, trackedCurrent)
	* Bugfix: Show only feedback requests of undeleted comments. Tab count show now open feedbacks, not tasks
	* Bugfix: Adding a comment over contextmenu works now properly
	* Bugfix: Daytracks now shows single and total tracking times correctly
	* Bugfix: Dynamic dates are handled correctly for negated filter widgets
	* Bugfix: Added own RTE save functions which prevent js errors on invalid instances
	* Bugfix: Change for active and deleted flag on login, even if username/password matches
	* Bugfix: Only strip slashes when magic_quotes is enables
	* Bugfix: Prevent ajax loader icon animations if not available (caused js error on login)
	* Bugfix: extractHeadersFromString() works now correctly
	* Bugfix: Added cleanRTEText() to handle preformatted text from email bodies
	* Bugfix: Prevent 60 minutes in timePart array after rounding up
	* Bugfix: Only load timezone from database if connected